# QtJapaneseLearningApp

./: .gitignore  AppBaseBtn.qml  AppResources.qrc  CMakeLists.txt  Config.xml  DbConnWindow.qml  ListItemCard.qml  Main.qml  ModelTest.qml  dbconnectionclass.cpp  dbconnectionclass.h  filterkanjilistmodel.cpp  filterkanjilistmodel.h  kanjilist.cpp  kanjilist.h  kanjilistmodel.cpp  kanjilistmodel.h  kanjiquiz.cpp  kanjiquiz.h  kanjiquizresultmodel.cpp  kanjiquizresultmodel.h  main.cpp  userloginclass.cpp  userloginclass.h  xmlreaderclass.cpp  xmlreaderclass.h
network/: apiconnectionclass.cpp  apiconnectionclass.h
views/: AppButton.qml  AppMsgDialog.qml  AppSwitchCtrl.qml  KanjiListCard.qml  KanjiMainWindow.qml  KanjiTallyWindow.qml  KanjiTestWindow.qml  LearnKanjiWindow.qml  LearnMainWindow.qml  LearnVocabListCard.qml  LearnVocabMainWindow.qml  LearnVocabWindow.qml  LogInPopUp.qml  LoginWindow.qml  RegisterPopUp.qml  RegisterWindow.qml  SearchTextField.qml  VocabMainWindow.qml  VocabTallyWindow.qml  VocabTestWindow.qml
vocab/: filtervocablistmodel.cpp  filtervocablistmodel.h  vocabdetailsmodel.cpp  vocabdetailsmodel.h  vocablist.cpp  vocablist.h  vocablistmodel.cpp  vocablistmodel.h  vocabquiz.cpp  vocabquiz.h  vocabquizresultmodel.cpp  vocabquizresultmodel.h
